--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^3.0.0",
     "@types/gapi.calendar": "^3.0.6",
     "@types/google.accounts": "^0.0.4",
+    "@types/luxon": "^3.1.0",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.1",
     "svelte-preprocess": "^4.10.7",
@@ -22,6 +23,7 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "luxon": "^3.1.1",
     "pdfjs-dist": "^2.16.105"
   }
 }
