--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
+  "packageManager": "pnpm@9.5.0",
+  "engines": {
+    "node": ">=20",
+    "pnpm": ">=9"
+  },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "@tsconfig/svelte": "^3.0.0",
@@ -25,6 +30,5 @@
   "dependencies": {
     "luxon": "^3.1.1",
     "pdfjs-dist": "^2.16.105"
-  },
-  "packageManager": "pnpm@9.5.0"
+  }
 }
